log
Thu 28 Mar 2024 02:40:46 PM UTC: 
 tests:  0|6
total_score: 0/70
160aa49
Thu 28 Mar 2024 02:53:54 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
3370ba9
Thu 28 Mar 2024 02:58:30 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bc9129c
Thu 28 Mar 2024 03:05:29 PM UTC: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/70
56d19ee
Thu 28 Mar 2024 03:15:34 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |     list->prev = newNode;
      |         ^~
Compilation failed
8330390
Thu 28 Mar 2024 03:15:43 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   64 |     list->prev = newNode;
      |         ^~
Compilation failed
8909740
Thu 28 Mar 2024 03:16:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ba61f27
Thu 28 Mar 2024 07:15:56 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e792ef0
Thu 28 Mar 2024 07:16:48 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 20/70
18e8bcf
Thu 28 Mar 2024 07:20:59 PM UTC: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
5115cc4
